# cargo-declared

./: AGENT.md  AGENTS.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  code review.md
.github/workflows/: rust.yml
fixtures/: Cargo.toml
fixtures/direct/: Cargo.toml
fixtures/direct/src/: lib.rs
fixtures/multi-version/: Cargo.toml
fixtures/multi-version/shared-0.1.0/src/: lib.rs
fixtures/multi-version/shared-0.2.0/src/: lib.rs
fixtures/transitive/: Cargo.toml
fixtures/transitive/src/: lib.rs
fixtures/unused/: Cargo.toml
src/: delta.rs  error.rs  lib.rs  main.rs  metadata.rs  output.rs
tests/: integration.rs
