[package]
name = "cargo-declared"
version = "0.1.0"
edition = "2021"
description = "Audit the gap between declared and compiled dependencies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CromboJambo/cargo-declared"
keywords = ["cargo", "dependencies", "audit", "declared", "tooling"]
categories = ["development-tools::cargo-plugins"]

[dependencies]
cargo_metadata = "0.18"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
cargo_metadata = "0.18"
thiserror = "2"
