[package]
name = "cargo-declared"
version = "0.1.3"
edition = "2021"
description = "Audit the gap between declared and compiled dependencies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CromboJambo/cargo-declared"
keywords = ["cargo", "dependencies", "audit", "declared", "tooling"]
categories = ["development-tools::cargo-plugins"]
readme = "README.md"

[dependencies]
cargo_metadata = "0.18"
clap = { version = "4", features = ["derive"] }
rig-core = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
cargo_metadata = "0.18"
tempfile = "3"
